--- a/app/src/main/res/layout/activity_phone_live.xml
+++ b/app/src/main/res/layout/activity_phone_live.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.xiezhenqi.business.more.live.phone.PhoneLiveListActivity">
+    tools:context=".business.more.live.phone.PhoneLiveActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <io.vov.vitamio.widget.VideoView
+            android:id="@+id/vm_videoview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <!--弹幕-->
+        <master.flame.danmaku.ui.widget.DanmakuView
+            android:id="@+id/danmakuView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <!--控制层-->
+        <include layout="@layout/layout_phonelive_control" />
+    </FrameLayout>
+
+</RelativeLayout>
