--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -120,4 +120,15 @@
         <attr name="stl_drawDecorationAfterTab" format="boolean" />
         <attr name="stl_indicatorWidthSameWithTextWidth" format="boolean" />
     </declare-styleable>
+
+    <!--PlayLoadIng-->
+    <declare-styleable name="LoadingView">
+        <attr name="outerCircleRadius" format="dimension|reference" />
+        <attr name="outerCircleColor" format="color|reference" />
+        <attr name="innerTriangleRadius" format="dimension|reference" />
+        <attr name="innerTriangleColor" format="color|reference" />
+        <attr name="backgroundColor" format="color|reference" />
+        <attr name="isNeedBackground" format="boolean" />
+        <attr name="strokeWidth" format="dimension|reference" />
+    </declare-styleable>
 </resources>
