--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,29 @@
     <color name="progress_reached_color">@color/themeColor</color>
     <color name="progress_unreached_color">#ffdddddd</color>
 
+
+    <!--直播开始-->
+    <color name="tab_text_normal">#212121</color>
+    <!--TabBar 字体颜色-->
+    <color name="comui_tab_text_color">#929292</color>
+    <color name="comui_tab_select_color">#FD9835</color>
+    <color name="background">#ffffff</color>
+    <color name="btn_ok_pressed">#ff4248</color>
+    <color name="btn_ok_unpressed">#99ff4248</color>
+    <color name="actionsheet_gray">#8F8F8F</color>
+    <color name="actionsheet_text">#555555</color>
+    <color name="dialog_white">#fdfdfd</color>
+    <color name="alertdialog_line">#c6c6c6</color>
+    <color name="alerDialogMsg">#343434</color>
+    <color name="alerDialogPosBtn">#ffffff</color>
+    <color name="picker_button">#ff4248</color>
+    <color name="title_bar_cancel">#ff8400</color>
+    <color name="guide_btn">#ffffff</color>
+    <color name="blue_btn_pressed">#ff96bfd2</color>
+    <color name="blue_btn_unpressed">#ffaedef4</color>
+    <!--播放器style-->
+    <color name="control_bar_bg">#e0222222</color>
+    <color name="base_background">#eeeeee</color>
+    <!--直播结束-->
+
 </resources>
