--- a/app/src/main/res/layout/activity_select_city.xml
+++ b/app/src/main/res/layout/activity_select_city.xml
@@ -25,8 +25,8 @@
             android:layout_width="36dp"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:layout_marginBottom="50dp"
             android:layout_marginTop="50dp"
+            android:paddingBottom="50dp"
             tools:ignore="RtlHardcoded" />
 
     </FrameLayout>
