--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:fitsSystemWindows="true"
-    tools:context=".business.more.playaac.PlayAacActivity">
+    tools:context=".business.more.playaac.MPermissionActivity">
 
     <include layout="@layout/merge_toolbar" />
 
