--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -118,4 +118,13 @@
         <attr name="isNeedBackground" format="boolean" />
         <attr name="strokeWidth" format="dimension|reference" />
     </declare-styleable>
+
+    <declare-styleable name="DrawableTextView">
+        <attr name="drawableLeft" format="reference" />
+        <attr name="drawableTop" format="reference" />
+        <attr name="drawableRight" format="reference" />
+        <attr name="drawableBottom" format="reference" />
+        <attr name="drawableWidth" format="dimension" />
+        <attr name="drawableHeight" format="dimension" />
+    </declare-styleable>
 </resources>
