--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
 
     <color name="textColor_toolbar_title">#ffffffff</color>
     <color name="lineColor_toolbar">#ffcccccc</color>
+    <color name="color_divider">#ffe6e6e6</color>
 
     <color name="themeColor">#fffd6a27</color>
 
