--- a/app/src/main/res/layout/item_common_loadmore.xml
+++ b/app/src/main/res/layout/item_common_loadmore.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<am.widget.stateframelayout.StateFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <am.widget.stateframelayout.StateFrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-</RelativeLayout>
+    android:layout_height="50dp"
+    app:sflErrorLayout="@layout/layout_common_loadmore_error" />
