--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,15 @@
             android:id="@+id/suspension_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white">
+            android:background="@color/textColor_cccccc">
 
             <com.xiezhenqi.business.more.cling2.suspensionbar.CircleImageView
                 android:id="@+id/iv_avatar"
                 android:layout_width="44dp"
                 android:layout_height="44dp"
                 android:padding="8dp"
-                android:src="@drawable/avatar1" />
+                android:src="@drawable/avatar1"
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/tv_nickname"
@@ -37,8 +38,9 @@
                 android:layout_marginLeft="8dp"
                 android:layout_toRightOf="@id/iv_avatar"
                 android:gravity="center_vertical"
-                android:text=""
-                android:textSize="12sp" />
+                android:text="昵称"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
 
             <View
                 android:id="@+id/top_divider"
