--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/textColor_cccccc">
 
     <com.xiezhenqi.business.more.cling2.suspensionbar.CircleImageView
         android:id="@+id/iv_avatar"
         android:layout_width="44dp"
         android:layout_height="44dp"
         android:padding="8dp"
-        android:src="@drawable/avatar1" />
+        android:src="@drawable/avatar1"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/tv_nickname"
@@ -18,7 +20,8 @@
         android:layout_toRightOf="@id/iv_avatar"
         android:gravity="center_vertical"
         android:text="Snowbean"
-        android:textSize="12sp" />
+        android:textColor="@color/black"
+        android:textSize="14sp" />
 
     <View
         android:id="@+id/top_divider"
